Fix horizontal scroll and add 5px more margin on the left and right. There is still a child element trying to break out.

--- a/src/components/Base.css
+++ b/src/components/Base.css
@@ -1,6 +1,7 @@
 .Base {
   text-align: left;
-  margin: 0 10px;
+  margin: 0 15px 0 15px;
+  overflow: hidden;
 }
 input[type=text] {
   width: 50%;
